--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,32 @@ isort = "^5.13.2"
 jupyterlab = "^4.3.0"
 matplotlib = "^3.9.2"
 
+[tool.poetry.group.website]
+optional = true
+
+[tool.poetry.group.website.dependencies]
+mkdocs-include-markdown-plugin = "^6.0.6"
+mkdocs-material = "^9.5.23"
+mkdocstrings = {version="^0.25.1", extras=["crystal", "python"]}
+mkdocs = "^1.6.0"
+pytkdocs = {version = "^0.16.1", extras = ["numpy-style"]}
+
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 79
+
+[tool.isort]
+import_heading_firstparty = 'First-party/Local'
+import_heading_future = 'Future'
+import_heading_stdlib = 'Standard library'
+import_heading_thirdparty = 'Third-party'
+line_length = 79
+multi_line_output = 3
+no_lines_before = 'LOCALFOLDER'
+profile = 'black'
