fix ROISparse corner bug

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,27 +1,23 @@
-name: pytest
+name: flake8
 
 on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-
+    name: flake8
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.9"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry install --with dev
-    - name: Test with pytest
+    - name: Run flake8
       run: |
-        make pytest
+        make flake8
