--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,29 @@ theme:
   name: "material"
   icon:
     logo: material/cube
+  features:
+    - content.code.copy
+    - content.code.annotate 
+  palette:
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 repo_url: https://github.com/christinahedges/sparse3d
 plugins:
   - search
@@ -24,6 +47,9 @@ plugins:
         python:
           options:
             show_source: true
+            filters:
+              - "!^_"
+            heading_level: 2  # Ensures API docs have an H2 header for structure
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
